# password-generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PasswordGenerator.py  README-de.md  README-fa.md  README.md  ReadMe.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
docs/: api.html  cli.html  clipboard.html  copy.js  index.html  installation.html  passphrases.html  passwords.html  pins.html  strength.html  style.css  usecases.html
docs/de/: api.html  cli.html  clipboard.html  index.html  installation.html  passphrases.html  passwords.html  pins.html  strength.html  usecases.html
docs/fa/: api.html  cli.html  clipboard.html  index.html  installation.html  passphrases.html  passwords.html  pins.html  strength.html  usecases.html
password-generator/: PasswordGenerator.py  README.md  cli.py  pyproject.toml
password-generator/password_generator/: clipboard.py  passphrase.py  pin.py  strength.py
password_generator/: __init__.py  breach.py  clipboard.py  common_passwords.txt  export.py  generator.py  passphrase.py  pin.py  strength.py  wordlist.txt
tests/: test_all.py
