[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "password-generator"
version = "2.0.0"
description = "A secure, configurable password generation toolkit for Python"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Ali Sadeghi Aghili", email = "alisadeghiaghili@gmail.com"}
]
keywords = ["password", "generator", "security", "passphrase", "pin", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/alisadeghiaghili/password-generator"
Documentation = "https://github.com/alisadeghiaghili/password-generator#readme"
Repository = "https://github.com/alisadeghiaghili/password-generator"
Issues = "https://github.com/alisadeghiaghili/password-generator/issues"
Changelog = "https://github.com/alisadeghiaghili/password-generator/blob/master/CHANGELOG.md"

[project.scripts]
password-gen = "cli:main"

[project.optional-dependencies]
cli = ["rich>=13.0"]
dev = ["pytest>=7.0", "black>=24.0", "pylint>=3.0"]

[tool.setuptools.packages.find]
include = ["password_generator*"]

[tool.setuptools.package-data]
password_generator = ["*.txt", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pylint.master]
jobs = 0
load-plugins = []

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "invalid-name",
    "import-error",
    "no-member",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-return-statements",
    "duplicate-code",
    "unspecified-encoding",
    "consider-using-f-string",
    "broad-except",
    "bare-except",
    "consider-using-with",
    "protected-access",
]

[tool.pylint.format]
max-line-length = 100
